--- a/SingleSignOn_With_SAML/packages.config
+++ b/SingleSignOn_With_SAML/packages.config
@@ -7,10 +7,12 @@
   <package id="jQuery" version="3.3.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.FriendlyUrls" version="1.0.2" targetFramework="net461" />
   <package id="Microsoft.AspNet.FriendlyUrls.Core" version="1.0.2" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Providers" version="1.1" targetFramework="net48" />
+  <package id="Microsoft.AspNet.Providers.Core" version="1.0" targetFramework="net48" />
   <package id="Microsoft.AspNet.ScriptManager.MSAjax" version="5.0.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.ScriptManager.WebForms" version="5.0.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net461" />
-  <package id="Microsoft.AspNet.Web.Optimization.WebForms" version="1.1.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Web.Optimization.WebForms" version="1.1.3" targetFramework="net48" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.IdentityModel.Logging" version="5.2.4" targetFramework="net461" />
   <package id="Microsoft.IdentityModel.Protocol.Extensions" version="1.0.4.403061554" targetFramework="net461" />
@@ -20,7 +22,7 @@
   <package id="Microsoft.IdentityModel.Tokens.Saml" version="5.2.4" targetFramework="net461" />
   <package id="Microsoft.IdentityModel.Xml" version="5.2.4" targetFramework="net461" />
   <package id="Microsoft.Owin" version="4.1.0" targetFramework="net461" />
-  <package id="Microsoft.Owin.Host.SystemWeb" version="4.0.0" targetFramework="net461" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="4.1.0" targetFramework="net48" />
   <package id="Microsoft.Owin.Security" version="4.1.0" targetFramework="net461" />
   <package id="Microsoft.Owin.Security.Cookies" version="4.0.0" targetFramework="net461" />
   <package id="Microsoft.Owin.Security.OpenIdConnect" version="4.0.0" targetFramework="net461" />
@@ -29,6 +31,7 @@
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="Sustainsys.Saml2" version="2.4.0" targetFramework="net461" />
+  <package id="Sustainsys.Saml2.HttpModule" version="2.4.0" targetFramework="net48" />
   <package id="Sustainsys.Saml2.Owin" version="2.4.0" targetFramework="net461" />
   <package id="System.Configuration.ConfigurationManager" version="4.4.1" targetFramework="net461" />
   <package id="System.IdentityModel.Tokens.Jwt" version="5.2.1" targetFramework="net461" />
@@ -37,5 +40,6 @@
   <package id="System.Security.Permissions" version="4.5.0" targetFramework="net461" />
   <package id="System.Security.Principal.Windows" version="4.5.0" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
+  <package id="System.Web.Providers" version="1.2" targetFramework="net48" />
   <package id="WebGrease" version="1.6.0" targetFramework="net461" />
 </packages>
